turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:14: error: Unmatched closing brace '}' ignored here
}
^LangtonsAnt:18: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:25: error: Unmatched closing brace '}' ignored here
}
^